# my_mandarin_database

./: .gitignore  README.md  constants.py  generate_video.ipynb  pyproject.toml  sandbox.ipynb  utils_audio.py  utils_data.py  utils_video.py
configs/: v006_Mario.py  v007_apps.py  v008_cats.py  v008b_cats.py  v009_hsk1.py  v009_hsk1_v1.py  v010_hsk1p2.py  v010_hsk2_v1.py  v011_hsk3_v1.py  v012_hsk4_v1.py  v013_hsk5_v1.py  v014_hsk6_v1.py
